[package]
name = "rust_jitsi_robot"
version = "0.1.0"
authors = ["Michel von Czettritz <michel@vczettritz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
json = "0.12.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
paho-mqtt = "0.9.1"
